--- a/sam-example/sam-iam-role-trust-policy-check/template.yaml
+++ b/sam-example/sam-iam-role-trust-policy-check/template.yaml
@@ -10,7 +10,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: functions
-      Handler: app.lambda_handler
+      Handler: app/app.lambda_handler
       Runtime: python3.7
       Events:
         EventRule:
